--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,12 @@
 
+[ updates ]:
+
+- added !=;
+- tb.entry(l, 4);
+
+- query from end or from start;
+- offset (with limit) for (from end and from start);
+
 [ bl ]:
 
 - update_many (for specific entry specific value) (profit = 1 loop pass to update multiple records);
