--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,17 @@
 
 
+
+
 [ updates ]:
 
 - added !=;
 - tb.entry(l, 4);
 - offset (with limit);
-- dump;
 
 [ bl ]:
+
+- migrations;
+- and after version_check ( separated independed method for checking );
 
 - update_many (for specific entry specific value) (profit = 1 loop pass to update multiple records);
 - create_many (create_many with less amount of file system calls (assemble all changes in one and make on file system call));;
